--- a/package.json
+++ b/package.json
@@ -1,34 +1,41 @@
 {
-  "name": "react-typescript-example",
-  "private": true,
+  "name": "project-name",
   "version": "0.0.0",
+  "private": true,
+  "homepage": "http://<user-name>.github.io/<project-name> OR <custom-domain>",
   "scripts": {
     "dev": "vite",
+    "predeploy": "yarn build && echo <custom-domain> > ./build/CNAME",
+    "deploy": "gh-pages -d build",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "format": "prettier --write .",
-    "lint": "eslint --fix . --ext .js,.jsx,.ts,.tsx"
+    "format": "prettier --write ./**/*.{js,ts,tsx}",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "eslint": "^8.0.1",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
+    "@vitejs/plugin-react": "^2.2.0",
+    "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "prettier": "^2.6.2",
-    "sass": "^1.50.1",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.5"
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.31.11",
+    "gh-pages": "^4.0.0",
+    "prettier": "^2.8.0",
+    "sass": "^1.56.1",
+    "typescript": "^4.9.3",
+    "vite": "^3.2.4",
+    "vite-plugin-pwa": "^0.13.3",
+    "vite-tsconfig-paths": "^3.6.0"
   }
 }
